default/objects/Transaction__c/fields/DML_type__c.field-meta.xml
<CustomField>
    <fullName>DML_type__c</fullName>
    <label>DML type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>update</fullName>
            </value>
            <value>
                <fullName>insert</fullName>
            </value>
            <value>
                <fullName>delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>