default/objects/Transaction__c/fields/Object_API__c.field-meta.xml
<CustomField>
    <fullName>Object_API__c</fullName>
    <label>Object API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>